Complete fixing focusbar overlapsing issue

--- a/src/components/FocusBar/FocusBar.scss
+++ b/src/components/FocusBar/FocusBar.scss
@@ -1,7 +1,7 @@
 .focus-bar {
   &__top {
     position: fixed;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -100%);
     height: 150vh;
     width: 300%;
     background-color: rgba(0, 0, 0, 0.5);
@@ -10,7 +10,7 @@
 
   &__bottom {
     position: fixed;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0);
     height: 150vh;
     width: 300%;
     background-color: rgba(0, 0, 0, 0.5);
